# sim2real

./: README.md
sim2real/: CMakeLists.txt  package.xml
sim2real/config/: config.yaml  config_footstep.yaml  config_ts.yaml  dynamic_config.yaml
sim2real/include/: pd_controller.h  read_pd_yaml.h  read_rl_yaml.h  rl_controller.h  robot_data.h
sim2real/launch/: sim2real.launch
sim2real/policy/: combined_model_dwaq.pt  combined_model_dwaq.rknn  footstep_pi_0320_8000.rknn  footstep_pi_0320_8000_dl2.rknn  policy_ts.rknn
sim2real/src/: mapping.cpp  pd_controller.cpp  read_pd_yaml.cpp  read_rl_yaml.cpp  rl_controller.cpp
sim2real/way_point/: way_point_backups_left.boost  way_point_backups_right.boost  waypoint_12.boost  waypoint_13.boost  waypoint_15.boost  waypoint_16.boost  waypoint_17.boost  waypoint_2.boost
